# kikitan-translator

./: .gitignore  .gitmodules  LICENSE.md  README.md  README_jp.md  current_version.json  deploy.py  kikitan-translator.sln  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  typescript.diff  vite.config.ts
.github/workflows/: build.yml
Kikitan OVR/: Kikitan OVR.sln
Kikitan OVR/Kikitan OVR/: Kikitan OVR.csproj  KikitanOverlay.cs  Program.cs
KikitanTranslator.Base/: Kikitan.cs  KikitanTranslator.Base.csproj  Logger.cs
KikitanTranslator.Console/: KikitanTranslator.Console.csproj  Program.cs
KikitanTranslator.Overlay/: Form1.Designer.cs  Form1.cs  KikitanTranslator.Overlay.csproj  OpenVROverlay.cs  OverlayReader.cs  OverlayServer.cs  Program.cs
KikitanTranslator.Photino/: Connector.cs  KikitanTranslator.Photino.csproj  Manager.cs  OverlayWriter.cs  Program.cs
KikitanTranslator.Resources/: KikitanTranslator.Resources.csproj
app/: layout.js  layout.tsx  page.jsx  page.tsx
deployment/: requirements.txt
public/: CHANGELOG.md  CHANGELOG_EN.md  CHANGELOG_JP.md  ort.js  vad-bundle-min.js  vad.worklet.bundle.min.js
scripts/: .env.example  build.py  build_and_deploy_kikitan.py  buildnpack.bat  requirements.txt  tauri.test.json
src/: globals.css  main.tsx  page.tsx
src-overlay/: Desktop Image Overlay.sln
src-tauri/: .gitignore  2  Cargo.toml  page.tsx  tauri.conf.json
src-whisper/: CMakeLists.txt  base64.h  httplib.h  json.hpp  main.cpp
translation-server/: azure.py  chatgpt.py  requirements.txt  server.py
whisper/: faster.py
(+142 files in other folders)
